--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
           <div class="mdl-layout-spacer"></div>
         </nav>
       </div>
-      <main class="mdl-layout__content">
+      <main class="mdl-layout__content" style="margin-left:0px;">
           {% include page-header.html %}
 
           <div class="page-content wrapper">
@@ -75,18 +75,5 @@
           {% include page-footer.html %}
       </main>
     </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-541992-12', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script>
-    window.setTimeout(function() {
-      (function(document,script,id){var js,r=document.getElementsByTagName(script)[0],protocol=/^http:/.test(document.location)?'http':'https';if(!document.getElementById(id)){js=document.createElement(script);js.id=id;js.src=protocol+'://widgets.changetip.com/public/js/widgets.js';r.parentNode.insertBefore(js,r)}}(document,'script','changetip_w_0'));
-    }, 3000);
-    </script>
   </body>
 </html>
