--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   {% endif %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>AcePicutreBot - {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>AcePictureBot - {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{{ site.description }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
