--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -111,6 +111,13 @@ a {
 .wrapper {
 }
 
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
 
 /**
  * Site footer
