--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -116,7 +116,16 @@ table {
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid #BDBDBD;
+    padding: 8px;
+}
+
+table:nth-of-type(1) {
+    display:table;
+    width:100%;
+}
+table:nth-of-type(1) th:nth-of-type(2) {
+    width:10%;
 }
 
 /**
