--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
           <div class="mdl-layout-spacer"></div>
         </nav>
       </div>
-      <main class="mdl-layout__content" style="margin-left:0px;">
+      <main class="mdl-layout__content">
           {% include page-header.html %}
 
           <div class="page-content wrapper">
